[BUG #8302] List renderer icon is shrinking when renderer is truncated * Added flex-shrink mixin

--- a/framework/source/resource/qx/mobile/scss/common/_mixins.scss
+++ b/framework/source/resource/qx/mobile/scss/common/_mixins.scss
@@ -143,6 +143,13 @@
   justify-content: $args;           /* NEW, Spec - Opera 12.1, Firefox 20+ */
 }
 
+
+@mixin flex-shrink($args) {
+  -webkit-flex-shrink: $args;       /* Chrome */
+  -ms-flex-negative: $args;         /* IE 10 */
+  flex-shrink: $args;               /* NEW, Spec - Opera 12.1, Firefox 20+ */
+}
+
 // -------------------------------
 
 @mixin border-image($args) {
